2008-09-29  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.2.1

	Merged vjaquez-temp-state-cleanup.  The complete concept of a
	temporary state has been removed.  The only user of the concept,
	the card-install flow now simply adds the card catalogue
	temporarily to the configuration instead of switching to a
	complete separate configuration.  See the branch history for a
	detailed list of changes.

2008-09-26  Marius Vollmer  <marius.vollmer@nokia.com>

	Merged mvo-fremantle-port.

	Reboot by executing /sbin/reboot.  Don't call flash-and-reboot
	ever.

	* src/dbus.cc: Removed unused D-Bus name defines.
	(send_reboot_message): Removed.
	* src/apt-worker.cc: Removed APTCMD_FLASH_AND_REBOOT command,
	added APTCMD_REBOOT command.  Don't call flash-and-reboot during
	rescue.
	* src/operations.cc: Don't use APTCMD_FLASH_AND_REBOOT, just use
	APTCMD_REBOOT always.
	* doc/packaging.txt, NEWS: Deprectae flash-and-reboot flag.

	Use HAL to get battery information.

	* src/dbus.cc (check_battery_status): Removed.
	(enough_battery_p): New.
	* src/operations.cc (ip_install_one, ip_install_cur): Use it.
	(enough_battery_to_update): Removed.
	* configure.ac: Check for HAL.

2008-09-15  Marius Vollmer  <marius.vollmer@nokia.com>

	Make sure that system settings are loaded before using them.

	* src/hildon-application-manager-config.cc (update_conf): Call
	load_system_settings before calling write_sources_list.

	Support for generic system-wide settings, including defaults.

	* src/confutils.cc (system_settings, default_distribution,
	load_system_settings): New.
	* src/main.cc (main): Call load_system_settings.
	* src/apt-worker.cc (misc_init): Likewise.

	* src/hildon-application-manager-config.cc: Handle system settings.

	Get default distribution from system settings.

	* configure.ac (DEFAULT_DIST): Removed.
	* src/apt-worker.cc (find_catalogue_for_pkgfile): Use
	default_distribution instead of DEFAULT_DIST.
	(find_catalogues_for_item_desc): Likewise.