@@ -52,6 +52,7 @@ bool red_pill_show_magic_sys = false;
 bool red_pill_include_details_in_log = false;
 bool red_pill_check_always = false;
 bool red_pill_ignore_wrong_domains = true;
+bool red_pill_permanent = false;
 
 #define SETTINGS_FILE ".osso/hildon-application-manager"
 
@@ -114,6 +115,8 @@ load_settings ()
 	    red_pill_check_always = val;
 	  else if (sscanf (line, "red-pill-ignore-wrong-domains %d", &val) == 1)
 	    red_pill_ignore_wrong_domains = val;
+	  else if (sscanf (line, "red-pill-permanent %d", &val) == 1)
+	    red_pill_permanent = val;
 	  else
 	    add_log ("Unrecognized configuration line: '%s'\n", line);
 	}
@@ -121,6 +124,9 @@ load_settings ()
       fclose (f);
     }
   
+  if (!red_pill_permanent)
+    red_pill_mode = false;
+
   /* XML - only kidding.
    */
 }
@@ -146,6 +152,7 @@ save_settings ()
       fprintf (f, "red-pill-check-always %d\n", red_pill_check_always);
       fprintf (f, "red-pill-ignore-wrong-domains %d\n",
 	       red_pill_ignore_wrong_domains);
+      fprintf (f, "red-pill-permanent %d\n", red_pill_permanent);
       fprintf (f, "assume-connection %d\n", assume_connection);
       fflush (f);
       fsync (fileno (f));
@@ -165,6 +172,9 @@ enum boolean_options {
   OPT_CHECK_ALWAYS,
   OPT_IGNORE_WRONG_DOMAINS,
   OPT_USE_APT_ALGORITHMS,
+#if 0
+  OPT_PERMANENT,
+#endif
   NUM_BOOLEAN_OPTIONS
 };
 
@@ -238,6 +248,11 @@ make_settings_tab (settings_closure *c)
   make_boolean_option (c, vbox, group, OPT_USE_APT_ALGORITHMS,
 		       "Use apt-get algorithms",
 		       &use_apt_algorithms);
+#if 0
+  make_boolean_option (c, vbox, group, OPT_PERMANENT,
+ 		       "Red pill is permanent",
+ 		       &red_pill_permanent);
+#endif
   g_object_unref (group);
 
   gtk_scrolled_window_add_with_viewport (GTK_SCROLLED_WINDOW (scrolled_window),
